--- a/views/index.hbs
+++ b/views/index.hbs
@@ -305,6 +305,7 @@
     </div>
 </section>
 
+<!--Popular Places-->
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
@@ -317,7 +318,7 @@
         <div class="row">
             <div class="col-sm col-md-6 col-lg ftco-animate">
                 <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/destination-1.jpg);">
+                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/vung-tau.jpg);">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <span class="icon-link"></span>
                         </div>
@@ -325,33 +326,25 @@
                     <div class="text p-3">
                         <div class="d-flex">
                             <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
+                                <h3><a href="#">Vũng Tàu</a></h3>
                             </div>
                             <div class="two">
-                                <span class="price">$200</span>
+                                <span class="price">1.700.000đ</span>
                             </div>
                         </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
+                        <p>Du lịch biển với những bãi tắm sạch, nghỉ ngơi tại khách sạn cao cấp</p>
+                        <p class="days"><span>2 ngày 3 đêm</span></p>
                         <hr>
                         <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
+                            <span><i class="icon-map-o"></i> Bà Rịa Vũng Tàu</span>
+                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm col-md-6 col-lg ftco-animate">
                 <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/destination-2.jpg);">
+                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/phu-quoc.jpg);">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <span class="icon-link"></span>
                         </div>
@@ -359,33 +352,25 @@
                     <div class="text p-3">
                         <div class="d-flex">
                             <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
+                                <h3><a href="#">Phú Quốc</a></h3>
                             </div>
                             <div class="two">
-                                <span class="price">$200</span>
+                                <span class="price">3.700.000đ</span>
                             </div>
                         </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
+                        <p>Thiên đường biển xanh, cát trắng, nghỉ dưỡng sang trọng, trải nghiệm đẳng cấp</p>
+                        <p class="days"><span>3 ngày 4 đêm</span></p>
                         <hr>
                         <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
+                            <span><i class="icon-map-o"></i> Phú Quốc</span>
+                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm col-md-6 col-lg ftco-animate">
                 <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/destination-3.jpg);">
+                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/ben-tre.jpg);">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <span class="icon-link"></span>
                         </div>
@@ -393,33 +378,25 @@
                     <div class="text p-3">
                         <div class="d-flex">
                             <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
+                                <h3><a href="#">Bến Tre</a></h3>
                             </div>
                             <div class="two">
-                                <span class="price">$200</span>
+                                <span class="price">2.000.000đ</span>
                             </div>
                         </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
+                        <p>Xứ dừa yên bình, sông nước hữu tình, trải nghiệm miền Tây dân dã</p>
+                        <p class="days"><span>1 ngày 2 đêm</span></p>
                         <hr>
                         <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
+                            <span><i class="icon-map-o"></i> Bến Tre</span>
+                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm col-md-6 col-lg ftco-animate">
                 <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/destination-4.jpg);">
+                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/da-lat.jpg);">
                         <div class="icon d-flex justify-content-center align-items-center">
                             <span class="icon-link"></span>
                         </div>
@@ -427,26 +404,18 @@
                     <div class="text p-3">
                         <div class="d-flex">
                             <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
+                                <h3><a href="#">Đà Lạt</a></h3>
                             </div>
                             <div class="two">
-                                <span class="price">$200</span>
+                                <span class="price">5.200.000đ</span>
                             </div>
                         </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
+                        <p>Thành phố sương mù, hoa nở quanh năm, khí hậu mát lạnh, lãng mạn</p>
+                        <p class="days"><span>3 ngày 4 đêm</span></p>
                         <hr>
                         <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
+                            <span><i class="icon-map-o"></i> Đà Lạt</span>
+                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
                         </p>
                     </div>
                 </div>
@@ -455,6 +424,7 @@
     </div>
 </section>
 
+<!--Thống kê-->
 <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row justify-content-center">
@@ -498,7 +468,7 @@
     </div>
 </section>
 
-
+<!--Popular Hotels-->
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
@@ -520,14 +490,6 @@
                         <div class="d-flex">
                             <div class="one">
                                 <h3><a href="#">New Orleans, Hotel</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
                             </div>
                             <div class="two">
                                 <span class="price per-price">$40<br><small>/night</small></span>
@@ -553,14 +515,6 @@
                         <div class="d-flex">
                             <div class="one">
                                 <h3><a href="#">New Orleans, Hotel</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
                             </div>
                             <div class="two">
                                 <span class="price per-price">$40<br><small>/night</small></span>
@@ -586,14 +540,6 @@
                         <div class="d-flex">
                             <div class="one">
                                 <h3><a href="#">New Orleans, Hotel</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
                             </div>
                             <div class="two">
                                 <span class="price per-price">$40<br><small>/night</small></span>
@@ -619,14 +565,6 @@
                         <div class="d-flex">
                             <div class="one">
                                 <h3><a href="#">New Orleans, Hotel</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
                             </div>
                             <div class="two">
                                 <span class="price per-price">$40<br><small>/night</small></span>
@@ -652,14 +590,6 @@
                         <div class="d-flex">
                             <div class="one">
                                 <h3><a href="#">New Orleans, Hotel</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
                             </div>
                             <div class="two">
                                 <span class="price per-price">$40<br><small>/night</small></span>
@@ -678,6 +608,7 @@
     </div>
 </section>
 
+<!--Recommended Restaurants-->
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
@@ -695,14 +626,7 @@
                     </a>
                     <div class="text p-3">
                         <h3><a href="#">Luxury Restaurant</a></h3>
-                        <p class="rate">
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star-o"></i>
-                            <span>8 Rating</span>
-                        </p>
+
                         <p>Far far away, behind the word mountains, far from the countries</p>
                         <hr>
                         <p class="bottom-area d-flex">
@@ -721,14 +645,7 @@
                     </a>
                     <div class="text p-3">
                         <h3><a href="#">Luxury Restaurant</a></h3>
-                        <p class="rate">
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star-o"></i>
-                            <span>8 Rating</span>
-                        </p>
+
                         <p>Far far away, behind the word mountains, far from the countries</p>
                         <hr>
                         <p class="bottom-area d-flex">
@@ -747,14 +664,7 @@
                     </a>
                     <div class="text p-3">
                         <h3><a href="#">Luxury Restaurant</a></h3>
-                        <p class="rate">
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star-o"></i>
-                            <span>8 Rating</span>
-                        </p>
+
                         <p>Far far away, behind the word mountains, far from the countries</p>
                         <hr>
                         <p class="bottom-area d-flex">
@@ -773,14 +683,7 @@
                     </a>
                     <div class="text p-3">
                         <h3><a href="#">Luxury Restaurant</a></h3>
-                        <p class="rate">
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star"></i>
-                            <i class="icon-star-o"></i>
-                            <span>8 Rating</span>
-                        </p>
+
                         <p>Far far away, behind the word mountains, far from the countries</p>
                         <hr>
                         <p class="bottom-area d-flex">
