--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -49,11 +49,11 @@
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
                     <i class="fa fa-fw fa-wrench"></i>
-                    <span class="nav-link-text">Components</span>
+                    <span class="nav-link-text">Quản Lý</span>
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents">
                     <li>
-                        <a href="#">Navbar</a>
+                        <a href="/admin/managetour">Tour</a>
                     </li>
                     <li>
                         <a href="#">Cards</a>
