--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -229,7 +229,7 @@
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright © Your Website 2017</small>
+                <small>Admin</small>
             </div>
         </div>
     </footer>
