--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -38,10 +38,10 @@
               <div class="collapse navbar-collapse" id="ftco-nav">
                   <ul class="navbar-nav ml-auto">
                       <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                      <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+<!--                      <li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
                       <li class="nav-item"><a href="/places" class="nav-link">Places</a></li>
-                      <li class="nav-item"><a href="/hotel" class="nav-link">Hotels</a></li>
-                      <li class="nav-item"><a href="/car_rent" class="nav-link">Car Rent</a></li>
+<!--                      <li class="nav-item"><a href="/hotel" class="nav-link">Hotels</a></li>-->
+<!--                      <li class="nav-item"><a href="/car_rent" class="nav-link">Car Rent</a></li>-->
                       <li class="nav-item"><a href="/signin_signout" class="nav-link">Sign in</a></li>
                   </ul>
               </div>
