--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -55,9 +55,9 @@
                     <li>
                         <a href="/admin/managetour">Tour</a>
                     </li>
-                    <li>
-                        <a href="#">Cards</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <a href="#">Cards</a>-->
+<!--                    </li>-->
                 </ul>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
